Tasklist css-overflow fix

--- a/css/taskstyle.css
+++ b/css/taskstyle.css
@@ -69,6 +69,7 @@ li {
     max-width: 45rem;
     min-width: 300px;
     margin: auto;
+    
     /* border-color: aqua;
     border-style: solid; */
 }
@@ -92,6 +93,12 @@ li {
     border: 1px solid #036BCB;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 15px;
+}
+
+#taskList {
+    padding-left: 12px;
+    padding-right: 12px;
+    word-break: break-all;
 }
 
 .taskHeadlines {
@@ -142,6 +149,11 @@ li {
     border: 1px solid #036BCB;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 15px;
+}
+
+#completedTaskList {
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 .completedTask {
